# telebot

src/telebot_robot/: README.md  help.md
src/telebot_robot/.devcontainer/: Dockerfile  devcontainer.json
src/telebot_robot/telebot_bringup/: CMakeLists.txt  package.xml
src/telebot_robot/telebot_bringup/launch/: testbed_full_bringup.launch.py
src/telebot_robot/telebot_bringup/maps/: testbed_world.yaml
src/telebot_robot/telebot_description/: CMakeLists.txt  package.xml
src/telebot_robot/telebot_description/launch/: robot_description.launch.py  testbed_rviz_barebones.launch.py
src/telebot_robot/telebot_description/urdf/: materials.xacro  testbed.gazebo  testbed.trans  testbed.xacro
src/telebot_robot/telebot_gazebo/: CMakeLists.txt  package.xml
src/telebot_robot/telebot_gazebo/launch/: spawn_playground.launch.py  spawn_testbed.launch.py
src/telebot_robot/telebot_navigation/: CMakeLists.txt  README.md  package.xml
src/telebot_robot/telebot_navigation/config/: amcl_params.yaml
src/telebot_robot/telebot_navigation/launch/: localization.launch.py  map_loader.launch.py  navigation.launch.py
src/telebot_robot/telebot_navigation/params/: nav2_params.yaml
src/telebot_robot/telebot_navigation/src/: go_to_goal.cpp  set_initial_pose.cpp
src/telebot_robot/videos/: Screencast from 01-17-2026 02:59:59 AM.webm
